--- a/Server/Game/Game-data/src/main/resources/dataConfig.properties
+++ b/Server/Game/Game-data/src/main/resources/dataConfig.properties
@@ -1,6 +1,6 @@
 # 连接池配置
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://127.0.0.1:3306/game
+jdbc.url=jdbc:mysql://127.0.0.1:3306/game?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8&useSSL=false&allowPublicKeyRetrieval=true
 jdbc.username=root
 jdbc.password=123456
 
