--- a/Server/Game/Game-server/src/main/resources/serverConfig.properties
+++ b/Server/Game/Game-server/src/main/resources/serverConfig.properties
@@ -8,7 +8,7 @@ entity.packName=com.su.common.po
 # redis配置
 redis.host=127.0.0.1
 redis.port=6379
-redis.password=root
+redis.password=123456
 
 # mq配置
 mq.queueName=DATA_QUEUE
